# inspect-tools

./: .gitignore  SOURCES.md  pyproject.toml
inspect_context_pressure/: __init__.py  _dataset.py  _inject.py  _library.py  _solver.py  _types.py
inspect_context_pressure/_fixtures/: __init__.py  schemas.py
inspect_tools/: __init__.py  _dataset.py  _inject.py  _library.py  _manifest.py  _seed.py  _solver.py  _synthesize.py  metrics.py  schema.py
inspect_tools/_fixtures/: __init__.py  schemas.py
inspect_tools/data/: tool_schemas_v1.json
scripts/: generate_output_schemas.py  render_llm_outputs.py  scrape_tool_schemas.py  vendor_classes.json
tests/: conftest.py  test_agentharm_compat.py  test_dataset.py  test_inject.py  test_library.py  test_manifest_hook.py  test_metrics.py  test_seed.py  test_smoke_e2e.py  test_solver.py  test_synthesize.py
