[project]
name = "inspect_context_pressure"
version = "0.1.0dev0"
description = "Context-pressure measurement Solver for Inspect: tools-channel schema injection at varied depths"
readme = "HANDOFF.md"
requires-python = ">=3.10"
dependencies = [
  "inspect_ai>=0.3.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspect_context_pressure"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
