[project]
name = "inspect-tools"
version = "0.1.0dev0"
description = "Context-pressure measurement Solver for Inspect: tools-channel schema injection at varied depths"
requires-python = ">=3.10"
dependencies = [
  "inspect_ai>=0.3.0",
  "mcp>=1.27",
  "numpy>=2.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "anthropic>=0.102.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspect_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
